// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customReports customReports_getItem 1`] = `
{
  "data": {
    "some": {
      "custom": "data",
    },
  },
  "id": "top-20-biggest-modules",
  "name": "Top 20 biggest modules",
  "view": [
    "struct",
    {
      "data": "#.stats.compilations.(
            $compilation: $;
            modules.({
              module: $,
              hash: $compilation.hash,
              size: getModuleSize($compilation.hash)
            })
          ).sort(size.size desc)[:20]",
      "item": "module-item",
      "view": "list",
    },
  ],
}
`;

exports[`customReports customReports_getItems 1`] = `
[
  {
    "data": {
      "some": {
        "custom": "data",
      },
    },
    "id": "top-20-biggest-modules",
    "name": "Top 20 biggest modules",
    "view": [
      "struct",
      {
        "data": "#.stats.compilations.(
            $compilation: $;
            modules.({
              module: $,
              hash: $compilation.hash,
              size: getModuleSize($compilation.hash)
            })
          ).sort(size.size desc)[:20]",
        "item": "module-item",
        "view": "list",
      },
    ],
  },
  {
    "data": {
      "some": {
        "custom": "data",
      },
    },
    "id": "top-20-biggest-modules",
    "name": "Top 20 biggest modules",
    "view": [
      "struct",
      {
        "data": "#.stats.compilations.(
            $compilation: $;
            modules.({
              module: $,
              hash: $compilation.hash,
              size: getModuleSize($compilation.hash)
            })
          ).sort(size.size desc)[:20]",
        "item": "module-item",
        "view": "list",
      },
    ],
  },
]
`;

exports[`customReports customReports_getItems 2`] = `
[
  {
    "data": {
      "some": {
        "custom": "data",
      },
    },
    "id": "top-20-biggest-modules",
    "name": "Top 20 biggest modules",
    "view": [
      "struct",
      {
        "data": "#.stats.compilations.(
            $compilation: $;
            modules.({
              module: $,
              hash: $compilation.hash,
              size: getModuleSize($compilation.hash)
            })
          ).sort(size.size desc)[:20]",
        "item": "module-item",
        "view": "list",
      },
    ],
  },
]
`;

exports[`customReports customReports_getItems 3`] = `
[
  {
    "data": {
      "some": {
        "custom": "data",
      },
    },
    "id": "top-20-biggest-modules",
    "name": "Top 20 biggest modules",
    "view": [
      "struct",
      {
        "data": "#.stats.compilations.(
            $compilation: $;
            modules.({
              module: $,
              hash: $compilation.hash,
              size: getModuleSize($compilation.hash)
            })
          ).sort(size.size desc)[:20]",
        "item": "module-item",
        "view": "list",
      },
    ],
  },
]
`;

exports[`moduleGraph_getPaths 1`] = `
{
  "children": [
    {
      "children": [],
      "node": {
        "id": "./node_modules/is-array/index.js",
      },
    },
  ],
  "node": {
    "id": "./node_modules/babel-loader/lib/index.js!./simple/src/index.ts|0b0c5dd45d404db9de8e4f112da38650",
  },
}
`;

exports[`modulesToFoamTree 1`] = `
{
  "groups": [
    {
      "groups": [
        {
          "groups": [
            {
              "groups": [],
              "label": "index.ts",
              "link": {
                "id": "292",
                "page": "module",
              },
              "path": "simple/src/index.ts",
              "weight": 113,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "index2.ts",
              "link": {
                "id": "503",
                "page": "module",
              },
              "path": "simple/src/index2.ts",
              "weight": 276,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "sub-module.ts",
              "link": {
                "id": "./node_modules/babel-loader/lib/index.js!./simple/src/sub-module.ts",
                "page": "module",
              },
              "path": "simple/src/sub-module.ts",
              "weight": 95,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "index2.css",
              "link": {
                "id": "945",
                "page": "module",
              },
              "path": "simple/src/index2.css",
              "weight": 644,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "test.txt",
              "link": {
                "id": "47",
                "page": "module",
              },
              "path": "simple/src/test.txt",
              "weight": 42,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "dyn.ts",
              "link": {
                "id": "848",
                "page": "module",
              },
              "path": "simple/src/dyn.ts",
              "weight": 21,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "statoscope.png",
              "link": {
                "id": "523",
                "page": "module",
              },
              "path": "simple/src/statoscope.png",
              "weight": 8311.84,
              "weightCompressor": undefined,
            },
          ],
          "label": "src",
          "link": undefined,
          "path": "simple/src",
          "weight": 9502.84,
          "weightCompressor": undefined,
        },
        {
          "groups": [
            {
              "groups": [
                {
                  "groups": [],
                  "label": "index.js",
                  "link": {
                    "id": "./simple/node_modules/foo/index.js",
                    "page": "module",
                  },
                  "path": "simple/node_modules/foo/index.js",
                  "weight": 48,
                  "weightCompressor": undefined,
                },
                {
                  "groups": [
                    {
                      "groups": [
                        {
                          "groups": [],
                          "label": "index.js",
                          "link": {
                            "id": "./simple/node_modules/foo/node_modules/bar/index.js",
                            "page": "module",
                          },
                          "path": "simple/node_modules/foo/node_modules/bar/index.js",
                          "weight": 25,
                          "weightCompressor": undefined,
                        },
                      ],
                      "label": "bar",
                      "link": {
                        "id": "bar",
                        "package": {
                          "instance": {
                            "path": "simple/node_modules/foo/node_modules/bar",
                          },
                          "name": "bar",
                        },
                        "page": "package",
                        "params": {
                          "instance": "simple/node_modules/foo/node_modules/bar",
                        },
                      },
                      "path": "simple/node_modules/foo/node_modules/bar",
                      "weight": 25,
                      "weightCompressor": undefined,
                    },
                  ],
                  "label": "node_modules",
                  "link": undefined,
                  "path": "simple/node_modules/foo/node_modules",
                  "weight": 25,
                  "weightCompressor": undefined,
                },
              ],
              "label": "foo",
              "link": {
                "id": "foo",
                "package": {
                  "instance": {
                    "path": "simple/node_modules/foo",
                  },
                  "name": "foo",
                },
                "page": "package",
                "params": {
                  "instance": "simple/node_modules/foo",
                },
              },
              "path": "simple/node_modules/foo",
              "weight": 73,
              "weightCompressor": undefined,
            },
            {
              "groups": [
                {
                  "groups": [],
                  "label": "index.js",
                  "link": {
                    "id": "./simple/node_modules/bar/index.js",
                    "page": "module",
                  },
                  "path": "simple/node_modules/bar/index.js",
                  "weight": 25,
                  "weightCompressor": undefined,
                },
              ],
              "label": "bar",
              "link": {
                "id": "bar",
                "package": {
                  "instance": {
                    "path": "simple/node_modules/bar",
                  },
                  "name": "bar",
                },
                "page": "package",
                "params": {
                  "instance": "simple/node_modules/bar",
                },
              },
              "path": "simple/node_modules/bar",
              "weight": 25,
              "weightCompressor": undefined,
            },
          ],
          "label": "node_modules",
          "link": undefined,
          "path": "simple/node_modules",
          "weight": 98,
          "weightCompressor": undefined,
        },
      ],
      "label": "simple",
      "link": undefined,
      "path": "simple",
      "weight": 9600.84,
      "weightCompressor": undefined,
    },
    {
      "groups": [
        {
          "groups": [
            {
              "groups": [],
              "label": "index.js",
              "link": {
                "id": "929",
                "page": "module",
              },
              "path": "node_modules/is-array/index.js",
              "weight": 470,
              "weightCompressor": undefined,
            },
          ],
          "label": "is-array",
          "link": {
            "id": "is-array",
            "package": {
              "instance": {
                "path": "node_modules/is-array",
              },
              "name": "is-array",
            },
            "page": "package",
            "params": {
              "instance": "node_modules/is-array",
            },
          },
          "path": "node_modules/is-array",
          "weight": 470,
          "weightCompressor": undefined,
        },
        {
          "groups": [
            {
              "groups": [
                {
                  "groups": [
                    {
                      "groups": [],
                      "label": "api.js",
                      "link": {
                        "id": "476",
                        "page": "module",
                      },
                      "path": "node_modules/css-loader/dist/runtime/api.js",
                      "weight": 1605,
                      "weightCompressor": undefined,
                    },
                    {
                      "groups": [],
                      "label": "getUrl.js",
                      "link": {
                        "id": "678",
                        "page": "module",
                      },
                      "path": "node_modules/css-loader/dist/runtime/getUrl.js",
                      "weight": 830,
                      "weightCompressor": undefined,
                    },
                  ],
                  "label": "runtime",
                  "link": undefined,
                  "path": "node_modules/css-loader/dist/runtime",
                  "weight": 2435,
                  "weightCompressor": undefined,
                },
              ],
              "label": "dist",
              "link": undefined,
              "path": "node_modules/css-loader/dist",
              "weight": 2435,
              "weightCompressor": undefined,
            },
          ],
          "label": "css-loader",
          "link": {
            "id": "css-loader",
            "package": {
              "instance": {
                "path": "node_modules/css-loader",
              },
              "name": "css-loader",
            },
            "page": "package",
            "params": {
              "instance": "node_modules/css-loader",
            },
          },
          "path": "node_modules/css-loader",
          "weight": 2435,
          "weightCompressor": undefined,
        },
      ],
      "label": "node_modules",
      "link": undefined,
      "path": "node_modules",
      "weight": 2905,
      "weightCompressor": undefined,
    },
    {
      "groups": [],
      "label": "external "extLib"",
      "link": {
        "id": "external var "extLib"",
        "page": "module",
      },
      "path": "external "extLib"",
      "weight": 42,
      "weightCompressor": undefined,
    },
    {
      "groups": [
        {
          "groups": [
            {
              "groups": [],
              "label": "chunk loaded",
              "link": {
                "id": "webpack/runtime/chunk loaded",
                "page": "module",
              },
              "path": "webpack/runtime/chunk loaded",
              "weight": 886,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "compat get default export",
              "link": {
                "id": "webpack/runtime/compat get default export",
                "page": "module",
              },
              "path": "webpack/runtime/compat get default export",
              "weight": 267,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "define property getters",
              "link": {
                "id": "webpack/runtime/define property getters",
                "page": "module",
              },
              "path": "webpack/runtime/define property getters",
              "weight": 308,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "ensure chunk",
              "link": {
                "id": "webpack/runtime/ensure chunk",
                "page": "module",
              },
              "path": "webpack/runtime/ensure chunk",
              "weight": 326,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "get javascript chunk filename",
              "link": {
                "id": "webpack/runtime/get javascript chunk filename",
                "page": "module",
              },
              "path": "webpack/runtime/get javascript chunk filename",
              "weight": 167,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "global",
              "link": {
                "id": "webpack/runtime/global",
                "page": "module",
              },
              "path": "webpack/runtime/global",
              "weight": 221,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "hasOwnProperty shorthand",
              "link": {
                "id": "webpack/runtime/hasOwnProperty shorthand",
                "page": "module",
              },
              "path": "webpack/runtime/hasOwnProperty shorthand",
              "weight": 88,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "jsonp chunk loading",
              "link": {
                "id": "webpack/runtime/jsonp chunk loading",
                "page": "module",
              },
              "path": "webpack/runtime/jsonp chunk loading",
              "weight": 3215,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "load script",
              "link": {
                "id": "webpack/runtime/load script",
                "page": "module",
              },
              "path": "webpack/runtime/load script",
              "weight": 1503,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "make namespace object",
              "link": {
                "id": "webpack/runtime/make namespace object",
                "page": "module",
              },
              "path": "webpack/runtime/make namespace object",
              "weight": 274,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "publicPath",
              "link": {
                "id": "webpack/runtime/publicPath",
                "page": "module",
              },
              "path": "webpack/runtime/publicPath",
              "weight": 867,
              "weightCompressor": undefined,
            },
          ],
          "label": "runtime",
          "link": undefined,
          "path": "webpack/runtime",
          "weight": 8122,
          "weightCompressor": undefined,
        },
      ],
      "label": "webpack",
      "link": undefined,
      "path": "webpack",
      "weight": 8122,
      "weightCompressor": undefined,
    },
  ],
  "label": "",
  "link": undefined,
  "path": "/",
  "weight": 20669.84,
  "weightCompressor": undefined,
}
`;

exports[`modulesToFoamTree 2`] = `
{
  "groups": [
    {
      "groups": [
        {
          "groups": [
            {
              "groups": [],
              "label": "index.ts",
              "link": {
                "id": "292",
                "page": "module",
              },
              "path": "simple/src/index.ts",
              "weight": 113,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "index2.ts",
              "link": {
                "id": "503",
                "page": "module",
              },
              "path": "simple/src/index2.ts",
              "weight": 276,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "sub-module.ts",
              "link": {
                "id": "./node_modules/babel-loader/lib/index.js!./simple/src/sub-module.ts",
                "page": "module",
              },
              "path": "simple/src/sub-module.ts",
              "weight": 95,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "index2.css",
              "link": {
                "id": "945",
                "page": "module",
              },
              "path": "simple/src/index2.css",
              "weight": 644,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "test.txt",
              "link": {
                "id": "47",
                "page": "module",
              },
              "path": "simple/src/test.txt",
              "weight": 42,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "dyn.ts",
              "link": {
                "id": "848",
                "page": "module",
              },
              "path": "simple/src/dyn.ts",
              "weight": 21,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "statoscope.png",
              "link": {
                "id": "523",
                "page": "module",
              },
              "path": "simple/src/statoscope.png",
              "weight": 8311.84,
              "weightCompressor": undefined,
            },
          ],
          "label": "src",
          "link": undefined,
          "path": "simple/src",
          "weight": 9502.84,
          "weightCompressor": undefined,
        },
        {
          "groups": [
            {
              "groups": [
                {
                  "groups": [],
                  "label": "index.js",
                  "link": {
                    "id": "./simple/node_modules/foo/index.js",
                    "page": "module",
                  },
                  "path": "simple/node_modules/foo/index.js",
                  "weight": 48,
                  "weightCompressor": undefined,
                },
                {
                  "groups": [
                    {
                      "groups": [
                        {
                          "groups": [],
                          "label": "index.js",
                          "link": {
                            "id": "./simple/node_modules/foo/node_modules/bar/index.js",
                            "page": "module",
                          },
                          "path": "simple/node_modules/foo/node_modules/bar/index.js",
                          "weight": 25,
                          "weightCompressor": undefined,
                        },
                      ],
                      "label": "bar",
                      "link": {
                        "id": "bar",
                        "package": {
                          "instance": {
                            "path": "simple/node_modules/foo/node_modules/bar",
                          },
                          "name": "bar",
                        },
                        "page": "package",
                        "params": {
                          "instance": "simple/node_modules/foo/node_modules/bar",
                        },
                      },
                      "path": "simple/node_modules/foo/node_modules/bar",
                      "weight": 25,
                      "weightCompressor": undefined,
                    },
                  ],
                  "label": "node_modules",
                  "link": undefined,
                  "path": "simple/node_modules/foo/node_modules",
                  "weight": 25,
                  "weightCompressor": undefined,
                },
              ],
              "label": "foo",
              "link": {
                "id": "foo",
                "package": {
                  "instance": {
                    "path": "simple/node_modules/foo",
                  },
                  "name": "foo",
                },
                "page": "package",
                "params": {
                  "instance": "simple/node_modules/foo",
                },
              },
              "path": "simple/node_modules/foo",
              "weight": 73,
              "weightCompressor": undefined,
            },
            {
              "groups": [
                {
                  "groups": [],
                  "label": "index.js",
                  "link": {
                    "id": "./simple/node_modules/bar/index.js",
                    "page": "module",
                  },
                  "path": "simple/node_modules/bar/index.js",
                  "weight": 25,
                  "weightCompressor": undefined,
                },
              ],
              "label": "bar",
              "link": {
                "id": "bar",
                "package": {
                  "instance": {
                    "path": "simple/node_modules/bar",
                  },
                  "name": "bar",
                },
                "page": "package",
                "params": {
                  "instance": "simple/node_modules/bar",
                },
              },
              "path": "simple/node_modules/bar",
              "weight": 25,
              "weightCompressor": undefined,
            },
          ],
          "label": "node_modules",
          "link": undefined,
          "path": "simple/node_modules",
          "weight": 98,
          "weightCompressor": undefined,
        },
      ],
      "label": "simple",
      "link": undefined,
      "path": "simple",
      "weight": 9600.84,
      "weightCompressor": undefined,
    },
    {
      "groups": [
        {
          "groups": [
            {
              "groups": [],
              "label": "index.js",
              "link": {
                "id": "929",
                "page": "module",
              },
              "path": "node_modules/is-array/index.js",
              "weight": 470,
              "weightCompressor": undefined,
            },
          ],
          "label": "is-array",
          "link": {
            "id": "is-array",
            "package": {
              "instance": {
                "path": "node_modules/is-array",
              },
              "name": "is-array",
            },
            "page": "package",
            "params": {
              "instance": "node_modules/is-array",
            },
          },
          "path": "node_modules/is-array",
          "weight": 470,
          "weightCompressor": undefined,
        },
        {
          "groups": [
            {
              "groups": [
                {
                  "groups": [
                    {
                      "groups": [],
                      "label": "api.js",
                      "link": {
                        "id": "476",
                        "page": "module",
                      },
                      "path": "node_modules/css-loader/dist/runtime/api.js",
                      "weight": 1605,
                      "weightCompressor": undefined,
                    },
                    {
                      "groups": [],
                      "label": "getUrl.js",
                      "link": {
                        "id": "678",
                        "page": "module",
                      },
                      "path": "node_modules/css-loader/dist/runtime/getUrl.js",
                      "weight": 830,
                      "weightCompressor": undefined,
                    },
                  ],
                  "label": "runtime",
                  "link": undefined,
                  "path": "node_modules/css-loader/dist/runtime",
                  "weight": 2435,
                  "weightCompressor": undefined,
                },
              ],
              "label": "dist",
              "link": undefined,
              "path": "node_modules/css-loader/dist",
              "weight": 2435,
              "weightCompressor": undefined,
            },
          ],
          "label": "css-loader",
          "link": {
            "id": "css-loader",
            "package": {
              "instance": {
                "path": "node_modules/css-loader",
              },
              "name": "css-loader",
            },
            "page": "package",
            "params": {
              "instance": "node_modules/css-loader",
            },
          },
          "path": "node_modules/css-loader",
          "weight": 2435,
          "weightCompressor": undefined,
        },
      ],
      "label": "node_modules",
      "link": undefined,
      "path": "node_modules",
      "weight": 2905,
      "weightCompressor": undefined,
    },
    {
      "groups": [],
      "label": "external "extLib"",
      "link": {
        "id": "external var "extLib"",
        "page": "module",
      },
      "path": "external "extLib"",
      "weight": 42,
      "weightCompressor": undefined,
    },
    {
      "groups": [
        {
          "groups": [
            {
              "groups": [],
              "label": "chunk loaded",
              "link": {
                "id": "webpack/runtime/chunk loaded",
                "page": "module",
              },
              "path": "webpack/runtime/chunk loaded",
              "weight": 886,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "compat get default export",
              "link": {
                "id": "webpack/runtime/compat get default export",
                "page": "module",
              },
              "path": "webpack/runtime/compat get default export",
              "weight": 267,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "define property getters",
              "link": {
                "id": "webpack/runtime/define property getters",
                "page": "module",
              },
              "path": "webpack/runtime/define property getters",
              "weight": 308,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "ensure chunk",
              "link": {
                "id": "webpack/runtime/ensure chunk",
                "page": "module",
              },
              "path": "webpack/runtime/ensure chunk",
              "weight": 326,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "get javascript chunk filename",
              "link": {
                "id": "webpack/runtime/get javascript chunk filename",
                "page": "module",
              },
              "path": "webpack/runtime/get javascript chunk filename",
              "weight": 167,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "global",
              "link": {
                "id": "webpack/runtime/global",
                "page": "module",
              },
              "path": "webpack/runtime/global",
              "weight": 221,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "hasOwnProperty shorthand",
              "link": {
                "id": "webpack/runtime/hasOwnProperty shorthand",
                "page": "module",
              },
              "path": "webpack/runtime/hasOwnProperty shorthand",
              "weight": 88,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "jsonp chunk loading",
              "link": {
                "id": "webpack/runtime/jsonp chunk loading",
                "page": "module",
              },
              "path": "webpack/runtime/jsonp chunk loading",
              "weight": 3215,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "load script",
              "link": {
                "id": "webpack/runtime/load script",
                "page": "module",
              },
              "path": "webpack/runtime/load script",
              "weight": 1503,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "make namespace object",
              "link": {
                "id": "webpack/runtime/make namespace object",
                "page": "module",
              },
              "path": "webpack/runtime/make namespace object",
              "weight": 274,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "publicPath",
              "link": {
                "id": "webpack/runtime/publicPath",
                "page": "module",
              },
              "path": "webpack/runtime/publicPath",
              "weight": 867,
              "weightCompressor": undefined,
            },
          ],
          "label": "runtime",
          "link": undefined,
          "path": "webpack/runtime",
          "weight": 8122,
          "weightCompressor": undefined,
        },
      ],
      "label": "webpack",
      "link": undefined,
      "path": "webpack",
      "weight": 8122,
      "weightCompressor": undefined,
    },
  ],
  "label": "",
  "link": undefined,
  "path": "/",
  "weight": 20669.84,
  "weightCompressor": undefined,
}
`;

exports[`modulesToFoamTree 3`] = `
{
  "groups": [
    {
      "groups": [
        {
          "groups": [
            {
              "groups": [],
              "label": "index.ts",
              "link": {
                "id": "292",
                "page": "module",
              },
              "path": "simple/src/index.ts",
              "weight": 113,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "index2.ts",
              "link": {
                "id": "503",
                "page": "module",
              },
              "path": "simple/src/index2.ts",
              "weight": 276,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "sub-module.ts",
              "link": {
                "id": "./node_modules/babel-loader/lib/index.js!./simple/src/sub-module.ts",
                "page": "module",
              },
              "path": "simple/src/sub-module.ts",
              "weight": 95,
              "weightCompressor": undefined,
            },
            {
              "groups": [],
              "label": "index2.css",
              "link": {
                "id": "945",
                "page": "module",
              },
              "path": "simple/src/index2.css",
              "weight": 438,
              "weightCompressor": "gzip",
            },
            {
              "groups": [],
              "label": "test.txt",
              "link": {
                "id": "47",
                "page": "module",
              },
              "path": "simple/src/test.txt",
              "weight": 99,
              "weightCompressor": "gzip",
            },
            {
              "groups": [],
              "label": "dyn.ts",
              "link": {
                "id": "848",
                "page": "module",
              },
              "path": "simple/src/dyn.ts",
              "weight": 160,
              "weightCompressor": "gzip",
            },
            {
              "groups": [],
              "label": "statoscope.png",
              "link": {
                "id": "523",
                "page": "module",
              },
              "path": "simple/src/statoscope.png",
              "weight": 6217,
              "weightCompressor": "gzip",
            },
          ],
          "label": "src",
          "link": undefined,
          "path": "simple/src",
          "weight": 7398,
          "weightCompressor": "multiple compressors",
        },
        {
          "groups": [
            {
              "groups": [
                {
                  "groups": [],
                  "label": "index.js",
                  "link": {
                    "id": "./simple/node_modules/foo/index.js",
                    "page": "module",
                  },
                  "path": "simple/node_modules/foo/index.js",
                  "weight": 48,
                  "weightCompressor": undefined,
                },
                {
                  "groups": [
                    {
                      "groups": [
                        {
                          "groups": [],
                          "label": "index.js",
                          "link": {
                            "id": "./simple/node_modules/foo/node_modules/bar/index.js",
                            "page": "module",
                          },
                          "path": "simple/node_modules/foo/node_modules/bar/index.js",
                          "weight": 25,
                          "weightCompressor": undefined,
                        },
                      ],
                      "label": "bar",
                      "link": {
                        "id": "bar",
                        "package": {
                          "instance": {
                            "path": "simple/node_modules/foo/node_modules/bar",
                          },
                          "name": "bar",
                        },
                        "page": "package",
                        "params": {
                          "instance": "simple/node_modules/foo/node_modules/bar",
                        },
                      },
                      "path": "simple/node_modules/foo/node_modules/bar",
                      "weight": 25,
                      "weightCompressor": undefined,
                    },
                  ],
                  "label": "node_modules",
                  "link": undefined,
                  "path": "simple/node_modules/foo/node_modules",
                  "weight": 25,
                  "weightCompressor": undefined,
                },
              ],
              "label": "foo",
              "link": {
                "id": "foo",
                "package": {
                  "instance": {
                    "path": "simple/node_modules/foo",
                  },
                  "name": "foo",
                },
                "page": "package",
                "params": {
                  "instance": "simple/node_modules/foo",
                },
              },
              "path": "simple/node_modules/foo",
              "weight": 73,
              "weightCompressor": undefined,
            },
            {
              "groups": [
                {
                  "groups": [],
                  "label": "index.js",
                  "link": {
                    "id": "./simple/node_modules/bar/index.js",
                    "page": "module",
                  },
                  "path": "simple/node_modules/bar/index.js",
                  "weight": 25,
                  "weightCompressor": undefined,
                },
              ],
              "label": "bar",
              "link": {
                "id": "bar",
                "package": {
                  "instance": {
                    "path": "simple/node_modules/bar",
                  },
                  "name": "bar",
                },
                "page": "package",
                "params": {
                  "instance": "simple/node_modules/bar",
                },
              },
              "path": "simple/node_modules/bar",
              "weight": 25,
              "weightCompressor": undefined,
            },
          ],
          "label": "node_modules",
          "link": undefined,
          "path": "simple/node_modules",
          "weight": 98,
          "weightCompressor": undefined,
        },
      ],
      "label": "simple",
      "link": undefined,
      "path": "simple",
      "weight": 7496,
      "weightCompressor": "multiple compressors",
    },
    {
      "groups": [
        {
          "groups": [
            {
              "groups": [],
              "label": "index.js",
              "link": {
                "id": "929",
                "page": "module",
              },
              "path": "node_modules/is-array/index.js",
              "weight": 268,
              "weightCompressor": "gzip",
            },
          ],
          "label": "is-array",
          "link": {
            "id": "is-array",
            "package": {
              "instance": {
                "path": "node_modules/is-array",
              },
              "name": "is-array",
            },
            "page": "package",
            "params": {
              "instance": "node_modules/is-array",
            },
          },
          "path": "node_modules/is-array",
          "weight": 268,
          "weightCompressor": "gzip",
        },
        {
          "groups": [
            {
              "groups": [
                {
                  "groups": [
                    {
                      "groups": [],
                      "label": "api.js",
                      "link": {
                        "id": "476",
                        "page": "module",
                      },
                      "path": "node_modules/css-loader/dist/runtime/api.js",
                      "weight": 662,
                      "weightCompressor": "gzip",
                    },
                    {
                      "groups": [],
                      "label": "getUrl.js",
                      "link": {
                        "id": "678",
                        "page": "module",
                      },
                      "path": "node_modules/css-loader/dist/runtime/getUrl.js",
                      "weight": 406,
                      "weightCompressor": "gzip",
                    },
                  ],
                  "label": "runtime",
                  "link": undefined,
                  "path": "node_modules/css-loader/dist/runtime",
                  "weight": 1068,
                  "weightCompressor": "gzip",
                },
              ],
              "label": "dist",
              "link": undefined,
              "path": "node_modules/css-loader/dist",
              "weight": 1068,
              "weightCompressor": "gzip",
            },
          ],
          "label": "css-loader",
          "link": {
            "id": "css-loader",
            "package": {
              "instance": {
                "path": "node_modules/css-loader",
              },
              "name": "css-loader",
            },
            "page": "package",
            "params": {
              "instance": "node_modules/css-loader",
            },
          },
          "path": "node_modules/css-loader",
          "weight": 1068,
          "weightCompressor": "gzip",
        },
      ],
      "label": "node_modules",
      "link": undefined,
      "path": "node_modules",
      "weight": 1336,
      "weightCompressor": "gzip",
    },
    {
      "groups": [],
      "label": "external "extLib"",
      "link": {
        "id": "external var "extLib"",
        "page": "module",
      },
      "path": "external "extLib"",
      "weight": 42,
      "weightCompressor": undefined,
    },
    {
      "groups": [
        {
          "groups": [
            {
              "groups": [],
              "label": "chunk loaded",
              "link": {
                "id": "webpack/runtime/chunk loaded",
                "page": "module",
              },
              "path": "webpack/runtime/chunk loaded",
              "weight": 407,
              "weightCompressor": "gzip",
            },
            {
              "groups": [],
              "label": "compat get default export",
              "link": {
                "id": "webpack/runtime/compat get default export",
                "page": "module",
              },
              "path": "webpack/runtime/compat get default export",
              "weight": 192,
              "weightCompressor": "gzip",
            },
            {
              "groups": [],
              "label": "define property getters",
              "link": {
                "id": "webpack/runtime/define property getters",
                "page": "module",
              },
              "path": "webpack/runtime/define property getters",
              "weight": 197,
              "weightCompressor": "gzip",
            },
            {
              "groups": [],
              "label": "ensure chunk",
              "link": {
                "id": "webpack/runtime/ensure chunk",
                "page": "module",
              },
              "path": "webpack/runtime/ensure chunk",
              "weight": 212,
              "weightCompressor": "gzip",
            },
            {
              "groups": [],
              "label": "get javascript chunk filename",
              "link": {
                "id": "webpack/runtime/get javascript chunk filename",
                "page": "module",
              },
              "path": "webpack/runtime/get javascript chunk filename",
              "weight": 154,
              "weightCompressor": "gzip",
            },
            {
              "groups": [],
              "label": "global",
              "link": {
                "id": "webpack/runtime/global",
                "page": "module",
              },
              "path": "webpack/runtime/global",
              "weight": 155,
              "weightCompressor": "gzip",
            },
            {
              "groups": [],
              "label": "hasOwnProperty shorthand",
              "link": {
                "id": "webpack/runtime/hasOwnProperty shorthand",
                "page": "module",
              },
              "path": "webpack/runtime/hasOwnProperty shorthand",
              "weight": 97,
              "weightCompressor": "gzip",
            },
            {
              "groups": [],
              "label": "jsonp chunk loading",
              "link": {
                "id": "webpack/runtime/jsonp chunk loading",
                "page": "module",
              },
              "path": "webpack/runtime/jsonp chunk loading",
              "weight": 1116,
              "weightCompressor": "gzip",
            },
            {
              "groups": [],
              "label": "load script",
              "link": {
                "id": "webpack/runtime/load script",
                "page": "module",
              },
              "path": "webpack/runtime/load script",
              "weight": 683,
              "weightCompressor": "gzip",
            },
            {
              "groups": [],
              "label": "make namespace object",
              "link": {
                "id": "webpack/runtime/make namespace object",
                "page": "module",
              },
              "path": "webpack/runtime/make namespace object",
              "weight": 186,
              "weightCompressor": "gzip",
            },
            {
              "groups": [],
              "label": "publicPath",
              "link": {
                "id": "webpack/runtime/publicPath",
                "page": "module",
              },
              "path": "webpack/runtime/publicPath",
              "weight": 432,
              "weightCompressor": "gzip",
            },
          ],
          "label": "runtime",
          "link": undefined,
          "path": "webpack/runtime",
          "weight": 3831,
          "weightCompressor": "gzip",
        },
      ],
      "label": "webpack",
      "link": undefined,
      "path": "webpack",
      "weight": 3831,
      "weightCompressor": "gzip",
    },
  ],
  "label": "",
  "link": undefined,
  "path": "/",
  "weight": 12705,
  "weightCompressor": "multiple compressors",
}
`;

exports[`validation validation_getItem 1`] = `
{
  "details": [
    {
      "payload": {
        "context": {
          "compilation": "a5ca8b0ac9b2c1315153",
          "module": "./node_modules/babel-loader/lib/index.js!./simple/src/index.ts|0b0c5dd45d404db9de8e4f112da38650",
        },
      },
      "query": "
            $input: resolveInputFile();
            {
              module: #.module.resolveModule(#.compilation),
            }
            ",
      "type": "discovery",
    },
  ],
  "id": 0,
  "message": "Module ./simple/src/index.ts + 3 modules should not be used",
  "related": [
    {
      "id": "./node_modules/babel-loader/lib/index.js!./simple/src/index.ts|0b0c5dd45d404db9de8e4f112da38650",
      "type": "module",
    },
  ],
  "rule": "webpack/restricted-modules",
  "type": "error",
}
`;

exports[`validation validation_getItems 1`] = `
[
  {
    "details": [
      {
        "payload": {
          "context": {
            "compilation": "a5ca8b0ac9b2c1315153",
            "module": "./node_modules/babel-loader/lib/index.js!./simple/src/index.ts|0b0c5dd45d404db9de8e4f112da38650",
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              module: #.module.resolveModule(#.compilation),
            }
            ",
        "type": "discovery",
      },
    ],
    "id": 0,
    "message": "Module ./simple/src/index.ts + 3 modules should not be used",
    "related": [
      {
        "id": "./node_modules/babel-loader/lib/index.js!./simple/src/index.ts|0b0c5dd45d404db9de8e4f112da38650",
        "type": "module",
      },
    ],
    "rule": "webpack/restricted-modules",
    "type": "error",
  },
  {
    "details": [
      {
        "payload": {
          "context": {
            "compilation": "a5ca8b0ac9b2c1315153",
            "module": "./node_modules/babel-loader/lib/index.js!./simple/src/index2.ts|c68ca0e747ab40a1e23e6b9e5f0d6325",
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              module: #.module.resolveModule(#.compilation),
            }
            ",
        "type": "discovery",
      },
    ],
    "id": 1,
    "message": "Module ./simple/src/index2.ts + 1 modules should not be used",
    "related": [
      {
        "id": "./node_modules/babel-loader/lib/index.js!./simple/src/index2.ts|c68ca0e747ab40a1e23e6b9e5f0d6325",
        "type": "module",
      },
    ],
    "rule": "webpack/restricted-modules",
    "type": "error",
  },
  {
    "details": [
      {
        "payload": {
          "context": {
            "compilation": "a5ca8b0ac9b2c1315153",
            "module": "./node_modules/babel-loader/lib/index.js!./simple/src/sub-module.ts",
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              module: #.module.resolveModule(#.compilation),
            }
            ",
        "type": "discovery",
      },
    ],
    "id": 2,
    "message": "Module ./simple/src/sub-module.ts should not be used",
    "related": [
      {
        "id": "./node_modules/babel-loader/lib/index.js!./simple/src/sub-module.ts",
        "type": "module",
      },
    ],
    "rule": "webpack/restricted-modules",
    "type": "error",
  },
  {
    "details": [
      {
        "payload": {
          "context": {
            "compilation": "a5ca8b0ac9b2c1315153",
            "module": "./node_modules/css-loader/dist/cjs.js!./simple/src/index2.css",
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              module: #.module.resolveModule(#.compilation),
            }
            ",
        "type": "discovery",
      },
    ],
    "id": 3,
    "message": "Module ./simple/src/index2.css should not be used",
    "related": [
      {
        "id": "./node_modules/css-loader/dist/cjs.js!./simple/src/index2.css",
        "type": "module",
      },
    ],
    "rule": "webpack/restricted-modules",
    "type": "error",
  },
  {
    "details": [
      {
        "payload": {
          "context": {
            "compilation": "a5ca8b0ac9b2c1315153",
            "module": "asset/resource|./simple/src/test.txt",
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              module: #.module.resolveModule(#.compilation),
            }
            ",
        "type": "discovery",
      },
    ],
    "id": 4,
    "message": "Module ./simple/src/test.txt should not be used",
    "related": [
      {
        "id": "asset/resource|./simple/src/test.txt",
        "type": "module",
      },
    ],
    "rule": "webpack/restricted-modules",
    "type": "error",
  },
  {
    "details": [
      {
        "payload": {
          "context": {
            "compilation": "a5ca8b0ac9b2c1315153",
            "module": "./node_modules/babel-loader/lib/index.js!./simple/src/dyn.ts",
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              module: #.module.resolveModule(#.compilation),
            }
            ",
        "type": "discovery",
      },
    ],
    "id": 5,
    "message": "Module ./simple/src/dyn.ts should not be used",
    "related": [
      {
        "id": "./node_modules/babel-loader/lib/index.js!./simple/src/dyn.ts",
        "type": "module",
      },
    ],
    "rule": "webpack/restricted-modules",
    "type": "error",
  },
  {
    "details": [
      {
        "payload": {
          "context": {
            "compilation": "a5ca8b0ac9b2c1315153",
            "module": "asset/inline|./simple/src/statoscope.png",
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              module: #.module.resolveModule(#.compilation),
            }
            ",
        "type": "discovery",
      },
    ],
    "id": 6,
    "message": "Module ./simple/src/statoscope.png should not be used",
    "related": [
      {
        "id": "asset/inline|./simple/src/statoscope.png",
        "type": "module",
      },
    ],
    "rule": "webpack/restricted-modules",
    "type": "error",
  },
  {
    "details": [
      {
        "payload": {
          "context": {
            "compilation": "a5ca8b0ac9b2c1315153",
            "module": "./node_modules/babel-loader/lib/index.js!./simple/src/index.ts",
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              module: #.module.resolveModule(#.compilation),
            }
            ",
        "type": "discovery",
      },
    ],
    "id": 7,
    "message": "Module ./simple/src/index.ts should not be used",
    "related": [
      {
        "id": "./node_modules/babel-loader/lib/index.js!./simple/src/index.ts",
        "type": "module",
      },
    ],
    "rule": "webpack/restricted-modules",
    "type": "error",
  },
  {
    "details": [
      {
        "payload": {
          "context": {
            "compilation": "a5ca8b0ac9b2c1315153",
            "module": "./node_modules/babel-loader/lib/index.js!./simple/src/index2.ts",
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              module: #.module.resolveModule(#.compilation),
            }
            ",
        "type": "discovery",
      },
    ],
    "id": 8,
    "message": "Module ./simple/src/index2.ts should not be used",
    "related": [
      {
        "id": "./node_modules/babel-loader/lib/index.js!./simple/src/index2.ts",
        "type": "module",
      },
    ],
    "rule": "webpack/restricted-modules",
    "type": "error",
  },
]
`;

exports[`validation validation_getItems 2`] = `[]`;

exports[`validation validation_resolveRule 1`] = `
{
  "description": "Ensures that bundle doesn't use specified modules",
  "package": {
    "author": {
      "name": "Sergey Melyukov",
      "url": "https://twitter.com/smelukov",
    },
    "description": "Plugin for @statoscope/stats-validator to validate webpack stats",
    "homepage": "https://github.com/statoscope/statoscope/",
    "name": "@statoscope/stats-validator-plugin-webpack",
    "version": "5.22.1-alpha.1",
  },
}
`;
